# ml-social-sentiment-analyzer

./: .env.example  Dockerfile  README.md  STRUCTURE.md  docker-compose.yml  package.json  pyproject.toml  tsconfig.json
src/: __init__.py
src/analysis/: __init__.py  realtime_analyzer.py
src/api/: __init__.py  rest_api.py
src/connectors/: __init__.py  discord_connector.py  reddit_connector.py  telegram_connector.py  tiktok_connector.py  twitter_connector.py  youtube_connector.py
src/monitoring/: __init__.py  metrics_collector.py
src/utils/: __init__.py  config.py
tests/: test_integration.py
