[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-social-sentiment-analyzer"
version = "1.0.0"
description = "Enterprise Social Media Sentiment Analyzer for Crypto Markets with enterprise patterns"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "ML Team", email = "ml-team@example.com"}
]
maintainers = [
    {name = "ML Team", email = "ml-team@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content"
]
keywords = [
    "crypto", "sentiment", "social-media", "nlp", "machine-learning", 
    "trading", "ml-framework", "enterprise", "real-time", "streaming"
]
dependencies = [
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "asyncpg>=0.29.0",
    "aioredis>=2.0.1",
    "aiokafka>=0.8.10",
    "websockets>=12.0",
    "nltk>=3.8.1",
    "spacy>=3.7.0",
    "textblob>=0.17.1",
    "vaderSentiment>=3.3.2",
    "tweepy>=4.14.0",
    "praw>=7.7.1",
    "telethon>=1.30.3",
    "discord.py>=2.3.2",
    "google-api-python-client>=2.110.0",
    "tiktokapi>=6.0.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.1.0",
    "numpy>=1.25.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.17.0",
    "wordcloud>=1.9.2",
    "networkx>=3.2.1",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.2",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.2",
    "emoji>=2.8.0",
    "langdetect>=1.0.9",
    "cryptography>=41.0.7",
    "python-multipart>=0.0.6",
    "celery>=5.3.4",
    "redis>=5.0.1",
    "motor>=3.3.2",
    "httpx>=0.25.2",
    "tenacity>=8.2.3",
    "circuitbreaker>=1.4.0",
    "ratelimit>=2.2.1",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-benchmark>=4.0.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "black>=23.10.0",
    "isort>=5.12.0",
    "bandit>=1.7.5",
    "pip-audit>=2.6.1",
    "factory-boy>=3.3.0",
    "respx>=0.20.2",
    "freezegun>=1.2.2"
]
gpu = [
    "torch[gpu]>=2.1.0",
    "faiss-gpu>=1.7.4"
]
monitoring = [
    "prometheus-fastapi-instrumentator>=6.1.0",
    "opentelemetry-exporter-prometheus>=1.12.0",
    "opentelemetry-exporter-jaeger>=1.21.0"
]

[project.urls]
Homepage = "https://github.com/KeepALifeUS"
Documentation = "https://example.com"
Repository = "https://github.com/KeepALifeUS"
"Bug Tracker" = "https://github.com/KeepALifeUS"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
    "-ra"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "benchmark: marks tests as benchmark tests"
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]
known_third_party = ["fastapi", "pydantic", "sqlalchemy"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "tweepy.*",
    "praw.*",
    "telethon.*",
    "discord.*",
    "tiktokapi.*",
    "vaderSentiment.*",
    "textblob.*",
    "wordcloud.*",
    "networkx.*"
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]